Perlin: Crazy resolution for using divs

--- a/perlin.html
+++ b/perlin.html
@@ -26,16 +26,16 @@
     }*/
 
     .container {
-      width: 825px;
+      width: 800px;
       border: 1px solid purple;
       color: white;
     }
     .container div {
       display: inline;
       float: left;
-      width: 25px;
-      height: 25px;
-      border: 1px solid red;
+      width: 10px;
+      height: 10px;
+      /*border: 1px solid red;*/
     }
 
     .btn-box {
