Got new physics engine installed. Collision Detection works

--- a/example.html
+++ b/example.html
@@ -3,7 +3,7 @@
 <head>
   <title>example</title>
   <script src="js/phaser.min.js"></script>
-  <script src="collision groups.js"></script>
+  <script src="platformer basics.js"></script>
 </head>
 <body>
 
