--- a/src/example2.html
+++ b/src/example2.html
@@ -18,11 +18,11 @@ var game = new Phaser.Game(800, 600, Phaser.AUTO, '', { preload: preload, create
 
 function preload() {
 
-    game.load.image('sky', 'assets/tests/sky.png');
-    game.load.image('ground', 'assets/sprites/platform.png');
-    game.load.image('star', 'assets/games/starstruck/star.png');
-    game.load.spritesheet('dude', 'assets/games/starstruck/dude.png', 32, 48);
-    game.load.spritesheet('snake', 'img/snake2.png', 64, 64);
+    game.load.image('sky', 'img/sky.png');
+    game.load.image('ground', 'img/platform.png');
+    game.load.image('star', 'img/star.png');
+    game.load.spritesheet('dude', 'img/dude.png', 32, 48);
+    game.load.spritesheet('snake', 'img/snake.png', 64, 48);
 
 }
 
@@ -32,6 +32,7 @@ var cursors;
 
 var stars;
 var snakes;
+var harmCoolDown = 0;
 
 function create() {
 
@@ -53,20 +54,26 @@ function create() {
     var ledge = platforms.create(400, 400, 'ground'); //  Now let's create two ledges
     ledge.body.immovable = true;
 
+    ledge = platforms.create(700, 350, 'ground');
+    ledge.body.immovable = true;
+
     ledge = platforms.create(-150, 250, 'ground');
     ledge.body.immovable = true;
 
-    player = game.add.sprite(32, game.world.height - 150, 'dude'); // The player and its settings
+    ledge = platforms.create(-400, 475, 'ground');
+    ledge.body.immovable = true;
+
+    player = game.add.sprite(128, game.world.height - 150, 'dude'); // The player and its settings
     game.physics.arcade.enable(player); //  We need to enable physics on the player
 
     //  Player physics properties. Give the little guy a slight bounce.
-    // player.body.bounce.y = 0.2;
-    // player.body.gravity.y = 300;
-    // player.body.collideWorldBounds = true;
+    player.body.bounce.y = 0.2;
+    player.body.gravity.y = 300;
+    player.body.collideWorldBounds = true;
 
     //  Our two animations, walking left and right.
-    // player.animations.add('left', [0, 1, 2, 3], 10, true);
-    // player.animations.add('right', [5, 6, 7, 8], 10, true);
+    player.animations.add('left', [0, 1, 2, 3], 10, true);
+    player.animations.add('right', [5, 6, 7, 8], 10, true);
 
     //  Finally some stars to collect
     stars = game.add.group();
@@ -89,13 +96,22 @@ function create() {
 
     snakes = game.add.group();
     snakes.enableBody = true;
+
+
     for (var i = 0; i < 2; i++)
     {
         //  Create a snake inside of the 'snakes' group
-        var snake = snakes.create(i * 500, 0, 'snake');
+        var snake = snakes.create(i * 500, 200, 'snake');
+        snake.animations.add('left', [0, 1, 2, 3], 10, true);
+        snake.animations.add('right', [4, 5, 6, 7], 10, true);
+
+
 
         //  Let gravity do its thing
         snake.body.gravity.y = 300;
+        snake.body.collideWorldBounds=true;
+        snakes.children[i].body.velocity.x = 150;
+        snakes.children[i].animations.play('right');
 
         //  This just gives each snake a slightly random bounce value
         // snake.body.bounce.y = 0.7 + Math.random() * 0.2;
@@ -108,14 +124,48 @@ function create() {
 }
 
 function update() {
-    scoreText = game.add.text(16, 16, 'score: 0', { fontSize: '32px', fill: '#000' });
+    // Harm Cooldown & effects
+    if (harmCoolDown > 0) {
+      player.alpha = 0.5;
+    } else if (harmCoolDown == 0 && player.alpha < 1) {
+      player.alpha = 1;
+    }
 
+    // Snake Management
+    for (var i=0; i<snakes.children.length; i++) {
+      // If a right wall stops snake, turn left
+      if (snakes.children[i].animations.name == 'right' &&
+          snakes.children[i].body.velocity.x == 0) {
+        snakes.children[i].body.velocity.x = -150;
+        snakes.children[i].animations.play('left');
+      }
+      // If a left wall stops snake, turn right
+      else if (snakes.children[i].animations.name == 'left' &&
+               snakes.children[i].body.velocity.x == 0) {
+        snakes.children[i].body.velocity.x = 150;
+        snakes.children[i].animations.play('right');
+      }
 
+      // Snake ledge - so snakes dont fall off and turn around
+      // if ( (snakes.children[0].y + 48) in platforms.children[0].getBounds() )
+
+    }
 
     //  Collide the player and the stars with the platforms
     game.physics.arcade.collide(player, platforms);
     game.physics.arcade.collide(stars, platforms);
     game.physics.arcade.collide(snakes, platforms);
+    game.physics.arcade.collide(snakes, snakes);
+    game.physics.arcade.collide(player, snakes, null, function(p,s) {
+      if (harmCoolDown == 0) {
+        player.body.velocity.y = -200;
+        harmCoolDown = 2;
+        game.time.events.repeat(Phaser.Timer.SECOND * 1, 2, function() {
+          harmCoolDown -= 1;
+        }, this);
+      }
+      return false;
+    });
 
     //  Checks to see if the player overlaps with any of the stars, if he does call the collectStar function
     game.physics.arcade.overlap(player, stars, collectStar, null, this);
@@ -123,31 +173,20 @@ function update() {
     //  Reset the players velocity (movement)
     player.body.velocity.x = 0;
 
-    if (cursors.left.isDown)
-    {
-        //  Move to the left
-        player.body.velocity.x = -150;
-
+    if (cursors.left.isDown) {
+        player.body.velocity.x = -150; //  Move to the left
         player.animations.play('left');
-    }
-    else if (cursors.right.isDown)
-    {
-        //  Move to the right
-        player.body.velocity.x = 150;
-
+    } else if (cursors.right.isDown) {
+        player.body.velocity.x = 150; //  Move to the right
         player.animations.play('right');
-    }
-    else
-    {
-        //  Stand still
-        player.animations.stop();
-
+    } else {
+        player.animations.stop(); //  Stand still
         player.frame = 4;
     }
 
+
     //  Allow the player to jump if they are touching the ground.
-    if (cursors.up.isDown && player.body.touching.down)
-    {
+    if (cursors.up.isDown && player.body.touching.down) {
         player.body.velocity.y = -350;
     }
 
