Cleaned up code, split into files

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
         <title>hello phaser!</title>
         <script src="js/phaser.min.js"></script>
         <script src="js/perlin.js"></script>
+        <script src="js/controls.js"></script>
+        <script src="js/regions.js"></script>
+        <script src="js/hud.js"></script>
         <script src="js/main.js"></script>
     </head>
     <body>
