--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <title>hello phaser!</title>
+        <link rel="stylesheet" type="text/css" href="css/styles.css">
         <script src="js/phaser.min.js"></script>
         <script src="js/perlin.js"></script>
         <script src="js/controls.js"></script>
@@ -11,6 +12,15 @@
         <script src="js/main.js"></script>
     </head>
     <body>
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-1 left">Left Meter</div>
+          <div class="col-xs-10" id="game"></div>
+          <div class="col-xs-1 right">Right Meter</div>
+        </div>
+      </div>
+
 
     </body>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 </html>
