--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" type="text/css" href="css/styles.css">
         <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
         <script src="js/phaser.min.js"></script>
         <script src="js/perlin.js"></script>
         <script src="js/controls.js"></script>
@@ -33,6 +34,83 @@
 
         </div>
       </div>
+
+
+    <!-- Modal -->
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title" id="myModalLabel">Dungeon Explorer</h4>
+          </div>
+
+          <div class="modal-body">
+            <div class="row">
+              <div class="col-xs-8 col-sm-8 col-md-8 col-lg-8">
+                <h4>How to Play</h4>
+                Get as far down in the earth as possible before your all light from your torch is extinguished. Collecting coal can provide additional fuel for your light-source, however be warned that utilizing bombs or using the jet-pack only further diminishes your rather limited supply. How far down can <i>you</i> get?
+              </div>
+              <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+                <h4>Controls</h4>
+                <div class="row">Hover - Spacebar</div>
+                <div class="row">Jump - Up Arrow</div>
+                <div class="row">Move - Left/Right Arrows</div>
+                <div class="row">Bomb - Down Arrow</div>
+              </div>
+            </div>
+          </div>
+
+          <div class="modal-footer">
+            <button type="button" class="btn btn-primary" data-dismiss="modal">Play</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <script>$('#myModal').modal()</script>
+    <!-- End of Modal -->
+
+
+
+
+
+
+    <!-- End of game Modal -->
+    <div class="modal fade" id="myScore" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title" id="myModalScoreLabel">Game Over</h4>
+          </div>
+
+          <div class="modal-body">
+            <div class="row">
+              <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+                <h4>My Score</h4>
+                <ul class="list-unstyled">
+                  <li>Depth: </li>
+                  <li>Ore Collected: </li>
+                  <li>Dmg Taken: </li>
+                  <li>Time Remaining: </li>
+                </ul>
+              </div>
+              <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+                <h3>Final Score</h3>
+                <h3>1000</h3>
+              </div>
+            </div>
+          </div>
+
+          <div class="modal-footer">
+            <button type="button" id="replay" class="btn btn-primary" data-dismiss="modal">Play Again</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <script>$('#myModal').modal()</script>
+    <!-- End of Modal -->
+
 
 
     </body>
