--- a/src/perlin.html
+++ b/src/perlin.html
@@ -55,19 +55,19 @@
 
 
     .c0 {
-      background-color: #7b3a3a;
+      background-color: #290077;
     }
     .c1 {
-      background-color: #391919;
+      background-color: #390099;
     }
     .c2 {
-      background-color: #391919;
+      background-color: #3955bb;
     }
     .c3 {
-      background-color: #ffffff;
+      background-color: #39aadd;
     }
     .c4 {
-      background-color: #391919;
+      background-color: #39ffff;
     }
     .c5 {
       background-color: gold;
