--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-        <script src="js/phaser.min.js"></script>
-        <script src="js/perlin.js"></script>
+        <script src="vendor/phaser.min.js"></script>
+        <script src="vendor/perlin.js"></script>
         <script src="js/controls.js"></script>
         <script src="js/regions.js"></script>
         <script src="js/hud.js"></script>
