--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <div class="row">
               <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
                 <h4>My Score</h4>
-                <ul class="list-unstyled">
+                <ul id="scoreList" class="list-unstyled">
                   <li>Depth: </li>
                   <li>Ore Collected: </li>
                   <li>Dmg Taken: </li>
@@ -97,7 +97,7 @@
               </div>
               <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
                 <h3>Final Score</h3>
-                <h3>1000</h3>
+                <h3 id="finalScore">1000</h3>
               </div>
             </div>
           </div>
