--- a/test/perlin.html
+++ b/test/perlin.html
@@ -3,8 +3,8 @@
 <head>
   <title>Perlin Test</title>
   <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
-  <script type="text/javascript" src="js/perlin.js"></script>
-  <script type="text/javascript" src="js/perlin-test-page.js"></script>
+  <script type="text/javascript" src="../vendor/perlin.js"></script>
+  <script type="text/javascript" src="perlin-test-page.js"></script>
   <style type="text/css">
     /*.c0 {
       background-color: #ffffff;
